<resources>
    <string name="app_name">Food Finder</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Search for a Food</string>
    <string name="second_fragment_label">Search Results</string>
    <string name="url">"https://api.nal.usda.gov/fdc/v1/foods/search?api_key=JQ5aRpzEtKywc1sS6YYf4HcGfY0fpMLBULBJ1PcW"</string>
    <!-- search fragment strings -->
    <string name="search_title">Search for a food</string>
    <string name="header_text">Welcome to Food Finder!</string>
    <string name="search_message">Search for nutrition information on common foods:</string>
    <string name="search_hint">Enter the name of a food item</string>
    <string name="search_button">Search Food Info</string>

    <!-- search results fragment strings -->
    <string name="results_title">Select an item for details</string>
    <string name="results_header">Search Results for: </string>
    <string name="api_call_failed">Call to API failed</string>


    <!-- results detail fragment strings -->
    <string name="item_detail_header">Details for : </string>
    <string name="label_serving_size">Serving Size : </string>
    <string name="label_calories">Calories : </string>
    <string name="label_fat">Fat : </string>
    <string name="label_chol">Cholesterol : </string>
    <string name="label_sodium">Sodium : </string>
    <string name="label_carbs">Carbohydrates : </string>
    <string name="label_protein">Protein : </string>
</resources>