<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:id="@+id/resultDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/servingKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_serving_size" />

            <TextView
                android:id="@+id/servingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/calorieKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_calories" />

            <TextView
                android:id="@+id/calorieValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fatKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fat" />

            <TextView
                android:id="@+id/fatValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cholKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_chol" />

            <TextView
                android:id="@+id/cholValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sodiumKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sodium" />

            <TextView
                android:id="@+id/sodiumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/carbsKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lable_carbs" />

            <TextView
                android:id="@+id/carbsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/proteinKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_protein" />

            <TextView
                android:id="@+id/proteinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>


    </TableLayout>

</FrameLayout>